assets/css/designA.css
/* override global style */
main {
    padding-bottom: 0px;
    padding-top: 0px;
}

.attendee-page-container {
    display: flex;
    flex-direction: column;
    gap: 20px;
    height: 90svh;
}

.page-heading {
    padding: 15px 0 5px 5px;
}

.card-container {
    position: relative;
    width: 100%;
}

@media screen and (min-height: 300px) {
    .card-container {
        height: 40%;
    }
}

@media screen and (min-height: 500px) {
    .card-container {
        height: 78%;
    }
}

.card {
    position: absolute;
    width: 100%;
    height: 100%;

    border-radius: 10px;
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    
    color: var(--text-primary);
    text-align: left;

    user-select: none;
    transition: transform 0.3s, opacity 0.3s ease;
    overflow-y: auto;
    overflow-x: hidden;

    padding: 20px;

    box-shadow: 0px 1px 5px #cacaca;
}

.card-content {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: flex-start;
    width: 100%;
}

.card-content p {
    text-align: end;
    padding-left: 6px;
}

.empty-card-content {
    display: flex;
    align-items: center;
    justify-content: center;
    text-align: center;
    width: 100%;
    height: 100%;
    color: #666;
    padding: 40px;
}

.img-container {
    height: 300px;
    width: 100%;
}

.details-title {
    font-weight: bold;
}

img {
    height: 100%;
    width: 100%;
    object-fit: cover;
}

.name {
    font-size: 30px;
    font-weight: bold;
}

.person-header {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 10px;
    width: 100%;
    justify-content: space-between;
    padding: 15px 0px 15px 0px;
}

.likes, .dislikes, .hobbies {
    padding-left: 25px;
    padding-bottom: 10px;
}

.bottom-buttons .yes-button, .bottom-buttons .no-button, .bottom-buttons .save-later-button {
    border-radius: 10px;
    
    font-size: 25px;
    color: var(--text-primary-light);

    padding: 25px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
}

.no-button {
    background-color: var(--red);
    border: solid var(--red-dark) 2px;
}

.no-button:active {
    background-color: #9c4141;
}

.save-later-button {
    background-color: var(--blue);
    border: solid var(--blue-dark) 2px;
}

.save-later-button:active {
    background-color: #406085;
}

.yes-button {
    background-color: var(--green);
    border: solid var(--green-dark) 2px;
}

.yes-button:active {
    background-color: #01633f;
}

.bottom-buttons {
    display: flex;
    justify-content: space-evenly;
    align-items: center;

    padding-bottom: env(safe-area-inset-bottom, 0px);
}

